[project]
version = "0.0.1"
name = "tracks"
dependencies = [
    "langchain",
    "langchain_google_vertexai",
    "langgraph",
    "pydantic",
    "pydantic-tfl-api",
    "dotenv",
    "python-telegram-bot"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
